--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div ng-click="helloworld()">
           Hello World!
         </div>
+        <div ng-repeat="list in lists">
+            {{ list.name }}
+        </div>
       </div>
 
       <div class="form-contact">
