--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
       </div>
 
-      <div class="form-contact">
-        <input ng-model="contact.name" />
+      <div class="form-contact" ng-controller="contactCtrl">
+        <input ng-model="contact.name" ng-change="ngChanged()" />
         <input ng-model="contact.mail" />
         <input ng-model="contact.type" />
         <input ng-model="contact.desc" />
