mock json and data request

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div ng-click="helloworld()">
           Hello World!
         </div>
+        <div ng-click="helloConsole()">
+          Hello Console!
+        </div>
         <div ng-repeat="list in lists">
             {{ list.name }}
         </div>
