setting a default flag/value on list item with ng-init

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="" ng-click="addToList()">+ Add To List</a>
         </div>
         <br>
-        <div ng-repeat="list in lists">
+        <div ng-repeat="list in lists | orderBy: 'name'" ng-init="list.completed = false">
           <div class="list-item" ng-class="{'editing-item' : editing, 'edited' : list.edited }">
             {{ list.name }}
             <input ng-change="list.edited = true" ng-blur="editing = false;" ng-show="editing" ng-model="list.name" class="editing-name" type="text" />
