--- a/index.html
+++ b/index.html
@@ -6,39 +6,39 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="author" content="Caleb Nance">
       <title>Infinite Web Applications</title>
+      <link href="styles/bootstrap.min.css" rel="stylesheet">
+      <link href="styles/animate.min.css" rel="stylesheet">
       <link href="styles/app.css" rel="stylesheet">
     </head>
-    <body ng-app="iwa">
+    <body ng-app="iwa" ng-controller="mainCtrl">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="logo animated fadeInLeftBig">
+              <svg id="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133.17 153.78">
+                <defs><style>.cls-1{fill:#005091;}</style></defs>
+                <title>infinite-web-applications</title>
+                <path id="Logo-2" data-name="Logo" class="cls-1" d="M281.07,441.37l-31.63-18.26L217.76,441.4l-34.91,20.15v76.89l19.25,11.11,47.34,27.34L316,538.44V461.56ZM228,556.5l-26-15-12.21-7V465.56l34.91-20.15,17.8,10.27-34.91,20.15v48.32l23.73,13.7Zm-13.48-36.34V479.85l28.7-16.57,1.49-.86-1.49,8.39L243,472.12,232.61,530.6Zm34.91,48.72-15-8.68,15-84.68,15,84.68Zm4.72-106.45h0l30.19,17.44v40.31L266.27,530.6Zm54.93,72L270.87,556.5l-3.31-18.65,23.73-13.7V475.84l-34.94-20.17,17.79-10.28,34.95,20.17v68.88Z" transform="translate(-182.85 -423.11)"/>
+              </svg>
+            </div>
+            <h1 class="heading animated fadeIn delay-1">INFINITE<br><small>Web Applications</small></h1>
+          </div><!-- /.col-xs-12 -->
+          <div class="col-xs-12 mt-20 animated fadeIn delay-2">
+            <p>We are a web applications company, based in Hell's Kitchen, NY.</p>
+            <p>Our Toolset:</p>
+            <ul>
+              <li>Angular</li>
+              <li>VueJS</li>
+              <li>Laravel</li>
+              <li>PHP</li>
+              <li>HTML/CSS/JS</li>
+            </ul>
+            <p class="mt-20">Check out... <a href="/our-work">Our Work</a></p>
+          </div><!-- /.col-xs-12 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
 
-      <h1>INFINITE<br><small>Web Applications</small></h1>
-
-      <br>
-
-      <div ng-controller="mainCtrl">
-        <div ng-click="helloworld()">
-          Hello World!
-        </div>
-        <div ng-click="helloConsole()">
-          Hello Console!
-        </div>
-      </div>
-
-      <br>
-
-      <list></list>
-
-      <br>
-      <br>
-      <br>
-
-      Contact CTRL
-      <div class="form-contact" ng-controller="contactCtrl">
-        <input ng-model="contact.name" ng-change="ngChanged()" />
-        <input ng-model="contact.mail" />
-        <input ng-model="contact.type" />
-        <input ng-model="contact.desc" />
-      </div><!-- /.form-contact -->
-
+      <!-- le javascript -->
       <script src="scripts/angular.min.js"></script>
       <script src="scripts/app.js"></script>
       <script src="scripts/controllers/main.js"></script>
