little more work on our work page -_-

--- a/index.html
+++ b/index.html
@@ -24,16 +24,29 @@
             <h1 class="heading animated fadeIn delay-1">INFINITE<br><small>Web Applications</small></h1>
           </div><!-- /.col-xs-12 -->
           <div class="col-xs-12 mt-20 animated fadeIn delay-2">
-            <p>We are a web applications company, based in Hell's Kitchen, NY.</p>
-            <p>Our Toolset:</p>
-            <ul>
-              <li>Angular</li>
-              <li>VueJS</li>
-              <li>Laravel</li>
-              <li>PHP</li>
-              <li>HTML/CSS/JS</li>
-            </ul>
-            <p class="mt-20">Check out... <a href="/our-work">Our Work</a></p>
+            <p class="lead">We are a web applications company, based in Hell's Kitchen, NY.</p>
+            <div class="col-xs-12 col-sm-4">
+              <p class="lead mb-0 mt-20">Our Toolset:</p>
+              <ul class="lead">
+                <li>Angular</li>
+                <li>VueJS</li>
+                <li>Laravel</li>
+                <li>PHP</li>
+                <li>HTML/CSS/JS</li>
+              </ul>
+            </div><!-- /.col-xs-12 -->
+            <div class="col-xs-12 col-sm-4">
+              <p class="lead mb-0 mt-20">Our Expertise:</p>
+              <ul class="lead">
+                <li>Web Applications</li>
+                <li>UI/UX</li>
+                <li>PSD to HTML</li>
+                <li>Admin Interface</li>
+              </ul>
+            </div><!-- /.col-xs-12 -->
+            <div class="col-xs-12">
+              <p class="lead mt-20">Check out...<a class="link" href="/our-work.html">Our Work</a></p>
+            </div><!-- /.col-xs-12 -->
           </div><!-- /.col-xs-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
