--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
               </ul>
             </div><!-- /.col-xs-12 -->
             <div class="col-xs-12">
-              <p class="lead mt-20">Check out...<a class="link" href="/our-work.html">Our Work</a></p>
+              <p class="lead mt-20">
+                Check out...
+                <a class="link" href="/our-work.html">Our Work</a>
+                .. or
+                <a class="link" href="/contact-us.html">Contact Us</a>
+              </p>
             </div><!-- /.col-xs-12 -->
           </div><!-- /.col-xs-12 -->
         </div><!-- /.row -->
