--- a/our-work.html
+++ b/our-work.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="author" content="Caleb Nance">
-      <title>Infinite Web Applications</title>
+      <title>Our Work | Infinite Web Applications</title>
       <link href="styles/bootstrap.min.css" rel="stylesheet">
       <link href="styles/animate.min.css" rel="stylesheet">
       <link href="styles/app.css" rel="stylesheet">
