--- a/our-work.html
+++ b/our-work.html
@@ -30,60 +30,7 @@
           <div class="col-xs-12">
             <h2 class="page-header">Our Work</h2>
             <div class="row">
-              <div class="col-sm-6 col-md-4">
-                <div class="thumbnail">
-                  <img src="img/portfolio/arca-concert_thumb.png" alt="...">
-                  <div class="caption">
-                    <h3>ARCA - Concert</h3>
-                    <p class="port-desc">Built on Laravel with Bootstrap & HTML/CSS/JQuery</p>
-                    <p class="port-user"><i class="glyphicon glyphicon-user"></i> Developer: Caleb Nance (Front End)</p>
-                    <p>
-                      <a href="https://arca.com/products/concert" target="_blank" class="btn btn-primary" role="button"><i class="glyphicon glyphicon-globe"></i> Website</a>
-                    </p>
-                  </div><!-- /.caption -->
-                </div><!-- /.thumbnail -->
-              </div><!-- /.col-sm-6 -->
-              <div class="col-sm-6 col-md-4">
-                <div class="thumbnail">
-                  <img src="img/portfolio/sunbrella_thumb.png" alt="...">
-                  <div class="caption">
-                    <h3>Sunbrella</h3>
-                    <p class="port-desc">Built on CakePHP with Bootstrap & HTML/CSS/JQuery</p>
-                    <p class="port-user"><i class="glyphicon glyphicon-user"></i> Developer: Caleb Nance (Front End)</p>
-                    <p>
-                      <a href="https://www.sunbrella.com" target="_blank" class="btn btn-primary" role="button"><i class="glyphicon glyphicon-globe"></i> Website</a>
-                    </p>
-                  </div><!-- /.caption -->
-                </div><!-- /.thumbnail -->
-              </div><!-- /.col-sm-6 -->
-              <div class="col-sm-6 col-md-4">
-                <div class="thumbnail">
-                  <img src="img/portfolio/infinite-web-app_thumb.png" alt="...">
-                  <div class="caption">
-                    <h3>Infinite Web Applications</h3>
-                    <p class="port-desc">Built with AngularJS</p>
-                    <p class="port-user"><i class="glyphicon glyphicon-user"></i> Developer: Caleb Nance (Full Site)</p>
-                    <p>
-                      <a href="http://infinitewa.com" class="btn btn-primary" role="button"><i class="glyphicon glyphicon-globe"></i> Website</a>
-                      <a href="https://github.com/infinitewebapplications/infinitewa/blob/master/README.md" target="_blank" class="btn btn-default" role="button"><i class="glyphicon glyphicon-equalizer"></i> Github</a>
-                    </p>
-                  </div><!-- /.caption -->
-                </div><!-- /.thumbnail -->
-              </div><!-- /.col-sm-6 -->
-              <div class="col-sm-6 col-md-4">
-                <div class="thumbnail">
-                  <img src="img/portfolio/truvdesign_thumb.png" alt="...">
-                  <div class="caption">
-                    <h3>TruVdesign</h3>
-                    <p class="port-desc">Built with AngularJS</p>
-                    <p class="port-user"><i class="glyphicon glyphicon-user"></i> Developer: Caleb Nance (Full Site)</p>
-                    <p>
-                      <a href="http://truvdesign.com" target="_blank" class="btn btn-primary" role="button"><i class="glyphicon glyphicon-globe"></i> Website</a>
-                      <a href="https://github.com/infinitewebapplications/truvdesign/blob/master/README.md" target="_blank" class="btn btn-default" role="button"><i class="glyphicon glyphicon-equalizer"></i> Github</a>
-                    </p>
-                  </div><!-- /.caption -->
-                </div><!-- /.thumbnail -->
-              </div><!-- /.col-sm-6 -->
+              <works></works>
             </div><!-- /.row -->
           </div><!-- /.col-xs-12 -->
         </div><!-- /.row -->
@@ -93,9 +40,7 @@
       <script src="scripts/angular.min.js"></script>
       <script src="scripts/app.js"></script>
       <script src="scripts/controllers/main.js"></script>
-      <script src="scripts/controllers/contact.js"></script>
       <script src="scripts/services/data.js"></script>
-      <script src="scripts/directives/list.js"></script>
-      <script src="scripts/infinite.js"></script>
+      <script src="scripts/directives/works.js"></script>
     </body>
 </html>
