--- a/contact-us.html
+++ b/contact-us.html
@@ -30,8 +30,9 @@
           <div class="col-xs-12">
             <h2 class="page-header">Contact Us</h2>
             <div class="row">
-              <div class="col-sm-6 col-md-4">
-              </div><!-- /.col-sm-6 -->
+              <div class="col-xs-12">
+                <contact></contact>
+              </div><!-- /.col-xs-12 -->
             </div><!-- /.row -->
           </div><!-- /.col-xs-12 -->
         </div><!-- /.row -->
@@ -41,6 +42,8 @@
       <script src="scripts/angular.min.js"></script>
       <script src="scripts/app.js"></script>
       <script src="scripts/controllers/main.js"></script>
+      <script src="scripts/controllers/contact.js"></script>
       <script src="scripts/services/data.js"></script>
+      <script src="scripts/directives/contact.js"></script>
     </body>
 </html>
